Name:		LHEParser
Version:	0.2.999
Synopsis:	Les Houches Event file parser
Description: 	Les Houches Event file format parser
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Custom
cabal-version:  >=1.6
Extra-source-files: Config.hs
                    fsrc/fformatter.f
                    csrc/formatter.h                   
                    csrc/cformatter.h
                    
Library
  hs-source-dirs: src
  ghc-options:      -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:  base>4, mtl > 2, bytestring, 
                  attoparsec == 0.10.*, 
                  bytestring-lexing, 
                  containers, text == 0.11.*, 
                  xml-types>=0.3, 
                  conduit == 0.4.*,
                  conduit-util >= 0.1.999 && < 0.3,
                  xml-conduit == 0.7.*,
                  transformers == 0.3.*, 
                  HEPUtil>=0.1.999
  Exposed-Modules: 
                    HEP.Parser.LHEParser
                    HEP.Parser.LHEParser.Type 
                    HEP.Parser.LHEParser.DecayTop
                    HEP.Parser.LHEParser.EventProcess
                    HEP.Parser.LHEParser.Parser
                    HEP.Parser.LHEParser.Parser.Text
                    HEP.Parser.LHEParser.Parser.Conduit
                    HEP.Parser.LHEParser.Formatter
                    HEP.Parser.LHEParser.Formatter.Internal
  Include-dirs:     csrc 
  Install-includes: fformatter.h
                    cformatter.h
  C-sources:        csrc/cformatter.c
  extra-libraries:  gfortran

-- fortran-sources:       fsrc/formatter.f

                  -- enumerator == 0.4.*, 
                  -- xml-enumerator == 0.4.*, 
                  -- , enumerator-util >=0.1.1.1
