Name:		LHEParser
Version:	0.999
Synopsis:	Les Houches Event file parser
Description: 	Les Houches Event file format parser
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
cabal-version:  >=1.6
Extra-source-files: Config.hs
                    fsrc/fformatter.f
                    csrc/formatter.h                   
                    csrc/cformatter.h
                    
Library
  hs-source-dirs: src
  ghc-options:      -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:  base>4, 
                  mtl > 2,
                  bytestring, 
                  attoparsec >= 0.10, 
                  bytestring-lexing, 
                  containers, 
                  text >= 0.11, 
                  xml-types>=0.3, 
                  conduit > 1,
                  conduit-util >= 0.999,
                  xml-conduit > 1,
                  transformers >= 0.3, 
                  HEPUtil>=0.999
  Exposed-Modules: 
                    HEP.Parser.LHE.Conduit
                    HEP.Parser.LHE.DecayTop
                    HEP.Parser.LHE.Formatter
                    -- HEP.Parser.LHE.Formatter.Internal
                    HEP.Parser.LHE.Text
                    HEP.Parser.LHE.Type 
  Include-dirs:     csrc 
  Install-includes: fformatter.h
                    cformatter.h
  C-sources:        csrc/cformatter.c
  extra-libraries:  gfortran

