Name:		LHEParser
Version:	0.999
Synopsis:	Les Houches Event file parser
Description: 	Les Houches Event file format parser
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type:     Simple
cabal-version:  >=1.6
Extra-source-files: Config.hs
                    fsrc/fformatter.f
                    csrc/formatter.h                   
                    csrc/cformatter.h
                    
Library
  hs-source-dirs: src
  ghc-options:      -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:  attoparsec >= 0.10, 
                  base>4, 
                  bytestring, 
                  bytestring-lexing, 
                  conduit > 1.1,
                  conduit-util >= 0.999,
                  containers, 
                  exceptions,
                  HEPUtil>=0.999,
                  mtl > 2,
                  primitive,
                  text >= 0.11, 
                  transformers >= 0.3, 
                  transformers-base, 
                  xml-types>=0.3,    
                  xml-conduit > 1
  Exposed-Modules: 
                    HEP.Parser.LHE.Conduit
                    HEP.Parser.LHE.DecayTop
                    HEP.Parser.LHE.Formatter
                    -- HEP.Parser.LHE.Formatter.Internal
                    HEP.Parser.LHE.Text
                    HEP.Parser.LHE.Type 
  Include-dirs:     csrc 
  Install-includes: fformatter.h
                    cformatter.h
  C-sources:        csrc/cformatter.c
  extra-libraries:  gfortran

